# logical-query-protocol

./: .gitattributes  .gitignore  CLAUDE.md  Makefile  README.md  buf.gen.yaml  buf.yaml  build  idempotent-toasting-nebula.md
lispyqp/: README.md  pyproject.toml  pyrightconfig.json
lispyqp/examples/transactions/: arithmetic.llqp  primitive_types.llqp  simple_ic.llqp  simple_recursion.llqp  simple_relatom.llqp  simple_sum.llqp  sum_with_groupby.llqp  tpch-q1.llqp
lispyqp/src/llqp/: llqp.lark  parser.py  validator.py
lispyqp/tests/: test_parser.py
lispyqp/tests/validator/: fail_types.llqp  fail_undeclared.llqp  valid_shadowing.llqp  valid_simple.llqp
meta/: pyproject.toml  pyrefly.toml
meta/bench/: README.md  benchmark.py  run.py
meta/src/meta/: __init__.py  cli.py  codegen_base.py  codegen_go.py  codegen_julia.py  codegen_python.py  codegen_templates.py  dead_functions.py  extra_pretty_gen.py  gensym.py  grammar.py  grammar.y  grammar_analysis.py  grammar_utils.py  grammar_validator.py  parser_gen.py  parser_gen_common.py  parser_gen_go.py  parser_gen_julia.py  parser_gen_python.py  pretty_gen.py  pretty_gen_common.py  pretty_gen_go.py  pretty_gen_julia.py  pretty_gen_python.py  proto_ast.py  proto_parser.py  proto_print.py  target.py  target_builtins.py  target_print.py  target_typer.py  target_utils.py  target_visitor.py  terminal_sequence_set.py  type_env.py  validation_result.py  yacc_action_parser.py  yacc_parser.py
meta/tests/meta/: test_analysis.py  test_cli_integration.py  test_codegen_base.py  test_codegen_go.py  test_codegen_julia.py  test_codegen_python.py  test_dead_functions.py  test_deconstruct.py  test_end_to_end_validation.py  test_formatted_tokens.py  test_grammar.py  test_grammar_utils.py  test_grammar_validator.py  test_parser_gen.py  test_parser_gen_full.py  test_pretty_gen.py  test_proto_parser.py  test_target.py  test_target_print.py  test_target_subst.py  test_target_typer.py  test_target_utils.py  test_terminal_sequence_set.py
python-tools/: README.md  pyproject.toml  pyrefly.toml
python-tools/examples/: basics.lqp
python-tools/json/: basics.json
python-tools/queries/lqp/: noop.lqp  q1.emitter.lqp  q1.lqp
python-tools/queries/rel/: noop.baseline.rel  q1.baseline.rel
python-tools/src/lqp/: cli.py  emit.py  generated_parser.py  generated_pretty_printer.py  ir.py  parser.py  print.py  proto_to_grammar.py  proto_to_tools.py  proto_validator.py  validator.py
python-tools/src/lqp.egg-info/: PKG-INFO  SOURCES.txt
python-tools/src/meta/: README.md  TODO.md  __init__.py  analysis.py  builtin_rules.sexp  cli.py  codegen_base.py  codegen_go.py  codegen_julia.py  codegen_python.py  codegen_templates.py  dead_functions.py  gensym.py  grammar.py  grammar.sexp  grammar.y  grammar_analysis.py  grammar_gen.py  grammar_gen_builtins.py  grammar_gen_rewrites.py  grammar_utils.py  grammar_validator.py  julia_parser_prologue.jl.template  left_factor.py  normalize.py  parser_gen.py  parser_gen_common.py  parser_gen_go.py  parser_gen_julia.py  parser_gen_python.py  parser_python.py  pretty_gen.py  pretty_gen_common.py  pretty_gen_julia.py  pretty_gen_python.py  printer_python.py  proto_ast.py  proto_parser.py  proto_print.py  proto_tool.py  (+17 more)
python-tools/tests/: conftest.py  test_cli_comparison.py  test_files.py  test_generated_parser.py  test_generated_pretty.py  test_generated_pretty_printer.py  test_ir.py  test_parser.py  test_print.py  test_proto_validator.py  test_sexp_defs.py  test_unit.py  utils.py
python-tools/tests/lqp_debug_output/: arithmetic.lqp  attributes.lqp  config_flags.lqp  copy.lqp  csv.lqp  def_and_loop.lqp  edb.lqp  fd.lqp  ffi.lqp  fragment_collision.lqp  instructions.lqp  loops.lqp  missing.lqp  monoid.lqp  monoid_monus.lqp  multiple_export.lqp  not.lqp  number_coercion.lqp  number_ids.lqp  one_plus_one.lqp  outer.lqp  piece_of_q1.lqp  pragma.lqp  primitive_types.lqp  primitives.lqp  quantifier.lqp  reachability.lqp  redefine_fragment.lqp  simple_cast.lqp  (+15 more)
(+671 files in other folders)
