[project]
name = "llqp"
version = "0.1.0"
description = "A parser for Logical Query Protocol (LQP) S-expressions into Protobuf"
readme = "README.md"
authors = [
    { name = "Niko Göbel", email = "nikolas.goebel@relational.ai" }
]
dependencies = [
    "lark>=1.1.9",
    "protobuf==5.29.4"
]

[project.scripts]
llqp = "llqp.parser:main"

[project.optional-dependencies]
test = ["pytest>=7.0.0", "pyright>=1.1.318"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pyright]
include = ["src"]
exclude = ["**/node_modules", "**/__pycache__", "build"]
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.11"
typeCheckingMode = "basic"
