[project]
name = "lqp"
version = "0.2.3"
description = "Validate and translate Logical Query Protocol (LQP) S-expressions into Protobuf"
readme = "README.md"
authors = [
    { name = "Niko Göbel", email = "nikolas.goebel@relational.ai" },
    { name = "David Zhao", email = "david.zhao@relational.ai" },
    { name = "Minsung Cho", email = "minsung.cho@relational.ai" },
    { name = "Martin McGrane", email = "martin.mcgrane@relational.ai" },
    { name = "Sławek Staworko", email = "slawek.staworko@relational.ai" },
    { name = "Nate Nystrom", email = "nate.nystrom@relational.ai" },
]
requires-python = ">=3.10"
dependencies = [
    "protobuf>=3.20.3,<5.0.0",
]

[project.scripts]
lqp = "lqp.cli:main"
lqp-meta-tool = "meta.cli:main"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-snapshot",
    "pyrefly==0.25.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
meta = ["grammar.y", "*.template"]

[tool.pyright]
include = ["src", "tests"]
extraPaths = ["src"]
pythonVersion = "3.10"
stubPath = ""
